# unai

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
api-client/: Cargo.toml
api-client/src/: firestore.rs  gcs.rs  gpt.rs  lib.rs  line.rs
api-client/src/gpt/: schema.rs
api-client/src/line/: schema.rs
chatbot/: Cargo.toml
chatbot/src/: app.rs  context.rs  gpt.rs  lib.rs  line.rs  main.rs  openai.rs
chatbot/src/gpt/: schema.rs
chatbot/src/line/: schema.rs
config/: google_service_account_key.json.example
domain/: Cargo.toml
domain/src/: context.rs  context_repo.rs  image.rs  lib.rs  message.rs  message_repo.rs  user.rs
server/: Cargo.toml
server/src/: app.rs  main.rs
service/: Cargo.toml
service/src/: gcs.rs  gpt.rs  lib.rs  line.rs
service/src/gpt/: schema.rs
service/src/line/: schema.rs
unai/: Cargo.toml
unai/src/: app.rs  main.rs
