[package]
name = "api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"
image = "0.25.2"
google-cloud-storage = { version = "0.22.1", default-features = false, features = [
    "rustls-tls",
    "auth",
] }
uuid = "1.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
firestore = "0.43.1"
serde_with = "3.11.0"

domain = { path = "../domain" }
