[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.7", default_features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
